# kfactory

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .lychee.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  MERGE_READ.oas  Makefile  PLAN_route_bundle_split.md  README.html  README.md  api.html  convert_notebooks_to_markdown.py  demo.gds  demo_geometry.gds  extract_notebook_images.py  genindex.html  index.html  intro.html  klive.html  minimal-reqs.txt  mkdocs.yml  objects.inv  plan.md  py-modindex.html  pyproject.toml  schematics.md  search.html  searchindex.js  setup.cfg  versions.json
.github/: CODEOWNERS  codecov.yml  release-drafter.yml
.github/workflows/: changelog.yml  coverage.yml  docs.yml  pages  pages.yml  pre-commit.yml  release-drafter.yml  release.yml  require-labels.yml  schedule.yml  test.yml  test_code.yml  ty.yml  typechecker.yml
2.5.0/: 404.html  index.html  objects.inv  sitemap.xml
2.5.0/_static/: klive.webm
2.5.0/changelog/: index.html
2.5.0/config/: index.html
2.5.0/dosdonts/: index.html
2.5.0/gdsfactory/: index.html
2.5.0/intro/: index.html
2.5.0/migration/: index.html
2.5.0/pcells/: index.html
2.5.0/pre/: index.html
2.5.0/search/: search_index.json
2.5.1/: 404.html  index.html  sitemap.xml
2.5.1/changelog/: index.html
2.5.1/config/: index.html
2.5.1/dosdonts/: index.html
2.5.1/gdsfactory/: index.html
2.5.1/intro/: index.html
2.5.1/migration/: index.html
2.5.1/pcells/: index.html
2.5.1/pre/: index.html
2.5.1/search/: search_index.json
3.0.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
3.0.0/changelog/: index.html
3.0.0/config/: index.html
3.0.0/gdsfactory/: index.html
3.0.0/migration/: index.html
3.0.0/reference/: index.html
3.0.0rc0/: 404.html  index.html  objects.inv  sitemap.xml
3.0.0rc0/_static/: logo.gds
3.0.0rc0/changelog/: index.html
3.0.0rc0/config/: index.html
3.0.0rc0/gdsfactory/: index.html
3.0.0rc0/migration/: index.html
3.0.0rc0/reference/: index.html
3.0.0rc1/: 404.html  _api_nav.yml  index.html  objects.inv  search.json  sitemap.xml
3.0.0rc1/_static/: logo.gds
3.0.0rc1/changelog/: index.html
3.0.0rc1/config/: index.html
3.0.0rc1/gdsfactory/: index.html
3.0.0rc1/migration/: index.html
3.0.0rc1/reference/: index.html
3.0.0rc2/: 404.html  index.html  search.json  sitemap.xml
3.0.0rc2/changelog/: index.html
3.0.0rc2/config/: index.html
3.0.0rc2/gdsfactory/: index.html
3.0.0rc2/migration/: index.html
3.0.0rc2/reference/: index.html
3.0.0rc3/: 404.html  index.html  search.json  sitemap.xml
3.0.0rc3/_static/: logo.gds
3.0.0rc3/changelog/: index.html
3.0.0rc3/config/: index.html
3.0.0rc3/gdsfactory/: index.html
3.0.0rc3/migration/: index.html
3.0.0rc3/reference/: index.html
3.0.0rc4/: 404.html  index.html  search.json  sitemap.xml
3.0.0rc4/changelog/: index.html
3.0.0rc4/config/: index.html
3.0.0rc4/gdsfactory/: index.html
3.0.0rc4/migration/: index.html
3.0.0rc4/reference/: index.html
3.0.1/: 404.html  index.html  search.json  sitemap.xml
3.0.1/_static/: doc_styles.lyp
3.0.1/changelog/: index.html
3.0.1/config/: index.html
3.0.1/gdsfactory/: index.html
3.0.1/migration/: index.html
3.0.1/reference/: index.html
3.0.2/: 404.html  index.html  objects.inv  search.json  sitemap.xml
3.0.2/changelog/: index.html
3.0.2/config/: index.html
3.0.2/gdsfactory/: index.html
3.0.2/migration/: index.html
3.0.2/reference/: index.html
_autosummary/: kfactory.kcell.html  kfactory.kdb.html  kfactory.placer.html  kfactory.utils.html
_modules/: index.html
_modules/kfactory/: kcell.html  placer.html  utils.html
_sources/: index.rst.txt
_sources/_autosummary/: kfactory.kcell.rst.txt  (+3 more)
benchmarks/: __init__.py  hotspots.py  route_bundle_collision.py
changelog.d/: +04f2d528.fixed.md  +1a6fc38b.added.md  +1d980207.fixed.md  +1ffcaee4.fixed.md  +3e25ba81.changed.md  +4cc3b871.fixed.md  +5140bde5.changed.md  +55816111.fixed.md  +5a6c92b8.added.md  +5b5ae519.added.md  +7c33e2c3.changed.md  +7c6f1941.changed.md  +84f527b3.added.md  +8fbce817.changed.md  +963ab5a0.added.md  +ab59f6ef.added.md  +c5b45af8.added.md  +c66f2595.added.md  +d501e164.added.md  +e921b99a.added.md  +ff9166b0.changed.md  +ffc15dfb.added.md  106.added.md  108.fixed.md  129.added.md  131.fixed.md  136.fixed.md  138.added.md  140.added.md  143.fixed.md  147.added.md  153.fixed.md  158.added.md  158.changed.md  159.added.md  159.fixed.md  163.fixed.md  165.fixed.md  167.fixed.md  180.added.md  (+11 more)
dev/: 404.html  _api_nav.yml  index.html  objects.inv  search.json  sitemap.xml
docs/: CHANGELOG.md  Makefile  _conf.yml  _toc.yml  api.rst  complex_cell.py  conf.py  conf.py.orig  config.md  config.rst  gen_ref_pages.py  index.md.old  index.rst  intro.rst  kfactory.routing.rst  kfactory.rst  klive.rst  layers.py  make.bat  make_schematic_diagram.py  mkdocs.yml  star.md  star.py  tutorial.rst  waveguide.md  waveguide.py  zensical.yml
docs_overhaul/: notes_build_system.md  notes_codebase.md  notes_existing_content_map.md  notes_gdsfactory_reference.md  plan.md  plan_zensical.md
kfactory/: __init__.py  kcell.py  kcell.pyi  kdb.py
latest/: 404.html  index.html
tests/: _test_meta_sample.oas  conftest.py  test.py  test_all_angle.py  test_annotations.py  test_cell.py  test_cell_annotations.py  test_cells.py  test_config.py  test_connectivity.py  test_cplxcells.py  test_cross_section.py  test_difftest.py  test_dkcell.py  test_enclosure.py  test_extrude.py  test_factories.py  test_factories_extra.py  test_factories_utils.py  test_factory_metadata.py  test_fill.py  test_fill_extra.py  test_gdsfactory.py  test_generic_factories.py  test_grid.py  test_instance.py  test_instance_group.py  test_instance_group_extra.py  test_instance_ports.py  test_instances.py  test_instances_extra.py  test_kclayout.py  test_l2n.py  test_layer_map.py  test_layers.py  test_layerstack.py  test_layout.py  test_meta.py  test_meta.py.orig  test_netlist.py  (+30 more)
(+2123 files in other folders)
