[build-system]
build-backend = "setuptools.build_meta"
requires = [ "build", "setuptools>=74", "setuptools-scm[toml]>=8.1", "wheel" ]

[project]
name = "kfactory"
version = "3.0.0rc4"
description = "KLayout API implementation of gdsfactory"
readme = "README.md"
authors = [ { name = "gdsfactory community", email = "contact@gdsfactory.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aenum>=3.1.17,<4",
  "cachetools>=7.1.4,<7.2",
  "kfnetlist>=0.2",
  "klayout>=0.30.9,<0.31",
  "loguru>=0.7.3,<0.8",
  "pydantic>=2.13.4,<2.14",
  "pydantic-extra-types>=2.11.1,<2.12",
  "pydantic-settings>=2.14.1,<3",
  "pygit2>=1.19.2,<2",
  "rapidfuzz>=3.14.5,<4",
  "rectangle-packer>=2.1,<3",
  "requests>=2.34.2,<3",
  "ruamel-yaml>=0.19.1,<0.20",
  "ruamel-yaml-string>=0.1.1,<0.2",
  "scipy>=1.17.1,<2",
  "semver>=3.0.4,<4",
  "toolz>=1.1,<2",
  "typer>=0.26.7,<0.27",
]
optional-dependencies.ci = [
  "pytest>=9.0.3,<9.1",
  "pytest-cov>=7.1,<7.2",
  "pytest-datadir>=1.8,<1.9",
  "pytest-randomly>=4.1,<4.2",
  "pytest-regressions>=2.11,<2.12",
  "pytest-xdist>=3.8,<3.9",
  "types-cachetools>=7.0.0.20260518,<7.1",
  "types-requests>=2.33.0.20260518,<2.34",
  "uv>=0.11.19,<0.12",
]
optional-dependencies.dev = [
  "kfactory[ci]",
  "pre-commit>=4.6,<4.7",
  "python-lsp-server[all]>=1.14,<1.15",
  "ruff>=0.15.16,<0.16",
  "rust-just~=1.51.0",
  "scipy-stubs>=1.17.1.5,<1.18",
  "tbump>=6.11,<6.12",
  "ty>=0.0.43,<0.1",
  "types-cachetools>=7.0.0.20260518,<7.1",
  "types-docutils>=0.22.3.20260518,<0.23",
  "types-pygments>=2.20.0.20260518,<2.21",
  "types-requests>=2.33.0.20260518,<2.34",
  "types-setuptools>=82.0.0.20260518,<82.1",
]
optional-dependencies.docs = [
  "erdantic>=1.2.1,<1.3",
  "griffe-inherited-docstrings>=1.1.3,<1.2",
  "griffe-pydantic>=1.3.1,<1.4",
  "griffe-warnings-deprecated>=1.1.1,<1.2",
  "kfactory[notebooks]",                     # transitively pulls in kfactory[ipy]
  "mkdocs-literate-nav>=0.6.3,<0.7",
  "mkdocs-video>=1.5,<1.6",
  "mkdocstrings[python]>=1.0.4,<1.1",
  "pymdown-extensions>=10.21.3,<10.22",
  "ruff>=0.15.16,<0.16",
  "zensical>=0.0.44,<0.1",
]
optional-dependencies.ipy = [
  "ipyevents>=2.0.4,<2.1",
  "ipython>=9.14,<9.15",
  "ipytree>=0.2.2,<0.3",
  "ipywidgets>=8.1.8,<8.2",
]
optional-dependencies.notebooks = [
  "ipykernel>=7.2,<7.4",
  "jupytext>=1.19.3,<1.20",
  # Notebook conversion needs the IPython display helpers
  # (`c.plot()` lazy-imports kfactory.widgets.interactive, which
  # pulls in ipyevents/ipywidgets/ipytree from the [ipy] extra).
  "kfactory[ipy]",
  "nbconvert>=7.17.1,<7.18",
]
scripts.kf = "kfactory.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.3,<9.1",
  "pytest-regressions>=2.11,<2.12",
]

[tool.setuptools]
packages.find.where = [ "src" ]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
exclude = [ "src/kfactory/widgets/interactive.py" ]
fix = true
# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",
  "ARG",
  "BLE001",
  "C901",
  "COM812",
  "D",
  "D100",
  "EM",
  "FBT",
  "PLC0415",
  "PLR0904",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "PLW1641",
  "PT011",
  "PT012",
  "S101",
  "S311",
  "SLF001",
  "TC004",
  "TID252",
  "TRY003",
]
lint.per-file-ignores = { "tests/*.py" = [ "D", "PLR2004", "INP001", "EM101" ], "docs/**/*.py" = [
  "T201",
  "B018",
  "ERA001",
  "INP001",
  "E402",
  "E501",
  "N801",
  "N806",
  "E741",
  "RUF001",
  "RUF002",
  "RUF003",
  "PT018"
] }
lint.pydocstyle.convention = "google"

[tool.codespell]
ignore-words-list = "euclidian,TE,TE/TM,te,ba,FPR,fpr_spacing,ro,nd,donot,schem,commitish"
skip = "pyproject.toml, uv.lock"

[tool.ty]
src.exclude = [ "docs", "src/kfactory/widgets/interactive.py", "tests/gdsfactory-yaml-pics" ]
src.include = [ "docs", "src", "tests" ]

[tool.pytest]
ini_options.testpaths = [ "src", "tests" ]
ini_options.norecursedirs = [ "extra/*.py" ]
ini_options.addopts = "--tb=short"

[tool.coverage]
run.omit = [ "src/kfactory/cli/**/*.py" ]
report.exclude_also = [
  "@(abc\\.)?abstractmethod",
  "@overload",
  "class .*\\(Protocol(\\[.*\\])?(,.*)?.*\\):",
  "def .*:[\\s]*\\.\\.\\.$",
  "if __name__ == .__main__.:",
  "if 0:",
  "if self\\.debug",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.ignore_errors = true
html.directory = "_build/coverage_html_report"

[tool.tbump]
file = [
  # For each file to patch, add a [[file]] config
  # section containing the path of the file, relative to the
  # tbump.toml location.
  { src = "pyproject.toml", search = 'version = "{current_version}"' },
  { src = "pyproject.toml", search = 'current = "{current_version}"' },
  { src = "src/kfactory/__init__.py" },
]
git.message_template = "Bump to {new_version}"
git.tag_template = "v{new_version}"
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"
version.current = "3.0.0rc4"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
version.regex = """  (?P<major>\\d+)
  \\.
  (?P<minor>\\d+)
  \\.
  (?P<patch>\\d+)
  (?:
    (?P<pre>(a|b|rc)\\d+)
  )?
  (?:
    \\.post(?P<post>\\d+)
  )?
  (?:
    \\.dev(?P<dev>\\d+)
  )?
  """
